tests/language_modules/10_expressions/valid/unary_negative.vf
module UnaryNegative

procedure main()
is
    let amount: Integer = -1
    check amount < 0
end main

end UnaryNegative