tests/language_modules/10_expressions/invalid_semantics/arithmetic_operand_mismatch.vf
module ArithmeticOperandMismatch

procedure main()
is
    let amount: Integer = 1 + true
    check true
end main

end ArithmeticOperandMismatch